# fatush

./: README.md  _utility_functions.py  pyproject.toml  pytest.ini  requirements.txt  search_engine.py  search_word.py
fatush/: search_engine.py  search_word.py
fatush/utils/: engine.py
tests/unit/: engine_test.py  script.py  script_test.py
utils/: __init__.py  config.py  engine.py  script.py
